tests/baselines/reference/initializerReferencingConstructorParameters.errors.txt
==== tests/cases/compiler/initializerReferencingConstructorParameters.ts (6 errors) ====
    // Initializer expressions for instance member variables are evaluated in the scope of the class constructor body but are not permitted to reference parameters or local variables of the constructor. 
    
    class C {
        a = x; // error
            ~
!!! initializerReferencingConstructorParameters.ts(4,9): error TS2095: Could not find symbol 'x'.
        b: typeof x; // error
                  ~
!!! initializerReferencingConstructorParameters.ts(5,15): error TS2095: Could not find symbol 'x'.
        constructor(x) { }
    }
    
    class D {
        a = x; // error
            ~
!!! initializerReferencingConstructorParameters.ts(10,9): error TS2095: Could not find symbol 'x'.
        b: typeof x; // error
                  ~
!!! initializerReferencingConstructorParameters.ts(11,15): error TS2095: Could not find symbol 'x'.
        constructor(public x) { }
    }
    
    class E {
        a = this.x; // ok
        b: typeof this.x; // error
                  ~~~~
!!! initializerReferencingConstructorParameters.ts(17,15): error TS1006: Identifier expected; 'this' is a keyword.
        constructor(public x) { }
    }
    
    class F<T> {
        a = this.x; // ok
        b = x; // error
            ~
!!! initializerReferencingConstructorParameters.ts(23,9): error TS2095: Could not find symbol 'x'.
        constructor(public x: T) { }
    }